# RS_Monitor_C-

./: CMakeLists.txt  main.cpp
src/arch/Linux/: LinuxCPU.cpp  LinuxCPU.h  LinuxDisk.cpp  LinuxDisk.h  LinuxRam.cpp  LinuxRam.h
src/gui/: MainWindow.cpp  MainWindow.h  cpucomponent.cpp  cpucomponent.h  cpucomponent.ui  cpudisplay.cpp  cpudisplay.h  cpudisplay.ui  cpulayout.cpp  cpulayout.h  cpulayout.ui  diskcomponent.cpp  diskcomponent.h  diskcomponent.ui  diskdisplay.cpp  diskdisplay.h  diskdisplay.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ramdisplay.cpp  ramdisplay.h  ramdisplay.ui
src/interface/: CPUInfo.cpp  CPUInfo.h  CPUObject.cpp  CPUObject.h  DiskInfo.cpp  DiskInfo.h  DiskObject.cpp  DiskObject.h  RamObject.cpp  RamObject.h  ResourceObject.h
